--- a/configure.in
+++ b/configure.in
@@ -475,62 +475,7 @@ util/Makefile
 doc/Makefile
 doc/public/Makefile
 doc/public/version.xml
-src/cairo.pc
 ])
 
 AC_OUTPUT
-
-dnl ===========================================================================
-
-V="$CAIRO_VERSION_MAJOR.$CAIRO_VERSION_MINOR.$CAIRO_VERSION_MICRO"
-echo ""
-echo "cairo (version $V [[$CAIRO_RELEASE_STATUS]]) will be compiled with the following surface backends:"
-echo "  Image:         yes (always builtin)"
-echo "  Xlib:          $use_xlib"
-echo "  Xlib Xrender:  $use_xlib_xrender"
-echo "  Quartz:        $use_quartz"
-echo "  Quartz-image:  $use_quartz_image"
-echo "  XCB:           $use_xcb"
-echo "  Win32:         $use_win32"
-echo "  OS2:           $use_os2"
-echo "  PostScript:    $use_ps"
-echo "  PDF:           $use_pdf"
-echo "  SVG:           $use_svg"
-echo "  glitz:         $use_glitz"
-echo "  BeOS:          $use_beos"
-echo "  DirectFB:      $use_directfb"
-echo ""
-echo "the following font backends:"
-echo "  User:          yes (always builtin)"
-echo "  FreeType:      $use_ft"
-echo "  Win32:         $use_win32_font"
-echo "  Quartz:        $use_quartz_font"
-echo ""
-echo "the following features:"
-echo "  PNG functions: $use_png"
-echo ""
-echo "and the following debug options:"
-echo "  gcov support:  $use_gcov"
-echo "  test surfaces: $use_test_surfaces"
-echo "  ps testing:    $test_ps"
-echo "  pdf testing:   $test_pdf"
-echo "  svg testing:   $test_svg"
-if test x"$use_win32" = "xyes"; then
-	echo "  win32 printing testing:    $test_win32_printing"
-fi
-echo ""
-echo "using CFLAGS:"
-echo $CAIRO_CFLAGS
-echo ""
-
-if test x"$use_ft"          != "xyes" && \
-   test x"$use_win32_font"  != "xyes" && \
-   test x"$use_quartz_font" != "xyes" ; then
-
-   AC_MSG_ERROR([Cairo requires at least one font backend.
-		  Please install freetype and fontconfig, then try again:
-		  http://freetype.org/	http://fontconfig.org/
-		])
-fi
-
-echo "$CAIRO_WARNING_MESSAGE"
+CAIRO_REPORT
