--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
-include $(srcdir)/Config.mk
+include $(srcdir)/Makefile.am.config
 
 EXTRA_DIST =
 CLEANFILES =
@@ -13,8 +13,8 @@ export_symbols = -export-symbols cairo.def
 cairo_def_dependency = cairo.def
 endif
 
-EXTRA_DIST           += cairo-supported-features.h cairo-features-win32.h Config.mk.win32
-MAINTAINERCLEANFILES += cairo-supported-features.h $(srcdir)/cairo-features-win32.h $(srcdir)/Config.mk.win32
+EXTRA_DIST           += cairo-supported-features.h cairo-features-win32.h Makefile.win32.config
+MAINTAINERCLEANFILES += cairo-supported-features.h $(srcdir)/cairo-features-win32.h $(srcdir)/Makefile.win32.config
 
 $(top_builddir)/config.h: $(top_srcdir)/config.h.in
 	cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) config.h
