[ps] Use floating point values when flattening color.
Use the full-precision color values when computing the alpha-blended
color.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -546,6 +546,7 @@ REFERENCE_IMAGES = \
 	over-above-source-ref.png                 \
 	over-above-source-rgb24-ref.png           \
 	over-around-source-ps-argb32-ref.png       \
+	over-around-source-ps-rgb24-ref.png        \
 	over-around-source-quartz-ref.png	   \
 	over-around-source-quartz-rgb24-ref.png	   \
 	over-around-source-ref.png                 \
