--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,14 @@ Makefile
 Makefile.in
 aclocal.m4
 autom4te.cache
+autoscan.log
 config.cache
 config.h
 config.h.in
 config.log
 config.status
 configure
+configure.scan
 libtool
 releases
 stamp-h
