Revert "[ps] A flattened gradient is not linear."
This reverts commit 85ed37da33522efa101eb508a4091bcfa24ae944.

Adrian Johnson pointed out that iff the gradient has constant alpha then
it can be flattened. Reverting this commit in order to restore the
capability to handle gradient flattening.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -448,6 +448,8 @@ REFERENCE_IMAGES = \
 	glyph-cache-pressure-quartz-ref.png	\
 	gradient-alpha-pdf-argb32-ref.png	\
 	gradient-alpha-pdf-rgb24-ref.png	\
+	gradient-alpha-ps-argb32-ref.png	\
+	gradient-alpha-ps-rgb24-ref.png	\
 	gradient-alpha-ref.png	\
 	gradient-alpha-rgb24-ref.png	\
 	gradient-zero-stops-ref.png	\
