[ps] Only use fallback images if the gradient has non-constant alpha.
If the gradient has constant alpha, then we can express it as a flattened
linear gradient. Otherwise, should the opacity vary across the gradient we
need to fallback.

--- a/test/.gitignore
+++ b/test/.gitignore
@@ -91,6 +91,7 @@ get-xrender-format
 glitz-surface-source
 glyph-cache-pressure
 gradient-alpha
+gradient-constant-alpha
 gradient-zero-stops
 group-paint
 imagediff
