[test] Add fill-alpha.
Benjamin Otte reported "who broke rgba fills? they look dithered with
recent git."

This commit is the result of a skim through the test-suite which revealed
no single test responsible for checking the basic operation of
"set_rgba(); fill();".

--- a/test/.gitignore
+++ b/test/.gitignore
@@ -65,6 +65,7 @@ fallback-resolution
 fallback-resolution.pdf
 fallback-resolution.ps
 fallback-resolution.svg
+fill-alpha
 fill-and-stroke
 fill-and-stroke-alpha
 fill-and-stroke-alpha-add
