--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -48,6 +48,7 @@ extend-reflect$(EXEEXT)					\
 extend-reflect-similar$(EXEEXT)				\
 extend-repeat$(EXEEXT)					\
 extend-repeat-similar$(EXEEXT)				\
+fill-alpha$(EXEEXT)					\
 fill-and-stroke$(EXEEXT)				\
 fill-and-stroke-alpha$(EXEEXT)				\
 fill-and-stroke-alpha-add$(EXEEXT)			\
@@ -391,6 +392,7 @@ REFERENCE_IMAGES = \
 	extend-reflect-ps-ref.png \
 	extend-repeat-ref.png	\
 	extend-repeat-similar-ref.png	\
+	fill-alpha-ref.png	\
 	fill-and-stroke-alpha-add-quartz-ref.png	\
 	fill-and-stroke-alpha-add-ref.png	\
 	fill-and-stroke-alpha-quartz-ref.png	\
