[test] Add fill-alpha-pattern.
A slight variation on the simple fill-alpha theme is that if Company is
truly seeing a regression where we dither, the error on a constant
background will be small and might be missed by the test suite.

--- a/test/.gitignore
+++ b/test/.gitignore
@@ -66,6 +66,7 @@ fallback-resolution.pdf
 fallback-resolution.ps
 fallback-resolution.svg
 fill-alpha
+fill-alpha-pattern
 fill-and-stroke
 fill-and-stroke-alpha
 fill-and-stroke-alpha-add
