[Makefile.am] Rename INCLUDES to AM_CPPFLAGS
Fixes automake warnings

--- a/boilerplate/Makefile.am
+++ b/boilerplate/Makefile.am
@@ -88,7 +88,7 @@ libcairoboilerplate_la_SOURCES += cairo-boilerplate-xlib.h
 libcairoboilerplate_la_SOURCES += cairo-boilerplate-xlib-private.h
 endif
 
-INCLUDES =					\
+AM_CPPFLAGS =					\
 	-I$(srcdir)				\
 	-I$(top_builddir)/src			\
 	-I$(top_srcdir)/src			\
