--- a/src/cairo-features.pc.in
+++ b/src/cairo-features.pc.in
@@ -3,10 +3,10 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
 
-Name: cairo-@backend_name@
-Description: @Backend_Name@ backend for cairo graphics library
+Name: @FEATURE_PC@
+Description: @FEATURE_NAME@ for cairo graphics library
 Version: @VERSION@
 
-Requires: @BACKEND_BASE@ @BACKEND_REQUIRES@
-Libs: @BACKEND_NONPKGCONFIG_LIBS@
-Cflags: -I${includedir}/cairo @BACKEND_NONPKGCONFIG_CFLAGS@
+Requires: @FEATURE_BASE@ @FEATURE_REQUIRES@
+Libs: @FEATURE_NONPKGCONFIG_LIBS@
+Cflags: -I${includedir}/cairo @FEATURE_NONPKGCONFIG_CFLAGS@
