[doc] Don't include *.h as sources
No idea why this was done initially but other projects I checked did not
do it.

--- a/doc/public/Makefile.am
+++ b/doc/public/Makefile.am
@@ -14,7 +14,7 @@ DOC_SOURCE_DIR=../../src
 
 # Used for dependencies
 HFILE_GLOB=$(top_srcdir)/src/cairo-*.h
-CFILE_GLOB=$(top_srcdir)/src/cairo-*.c $(top_srcdir)/src/cairo-*.h
+CFILE_GLOB=$(top_srcdir)/src/cairo-*.c
 
 include $(top_srcdir)/src/Makefile.am.config
 
