--- a/test/pdiff/Makefile.am
+++ b/test/pdiff/Makefile.am
@@ -1,5 +1,7 @@
-EXTRA_PROGRAMS = perceptualdiff
-EXTRA_DIST = gpl.txt
+include $(top_srcdir)/build/Makefile.am.common
+
+EXTRA_PROGRAMS += perceptualdiff
+EXTRA_DIST += gpl.txt
 
 noinst_LTLIBRARIES = libpdiff.la
 libpdiff_la_SOURCES = 		\
@@ -15,7 +17,3 @@ perceptualdiff_SOURCES =	\
 
 AM_CPPFLAGS = -I$(top_srcdir)/src -I$(top_builddir)/src $(CAIRO_CFLAGS)
 LDADD = libpdiff.la $(top_builddir)/src/libcairo.la
-#
-# Delete intermediate files as well
-clean-local:
-	-${FIND} . -name '*.[is]'   -print | ${XARGS} ${RM}
