Update gtk-doc makefile fragment
Also move it to build/.

We still do not call gtkdocize from autogen.sh.

--- a/configure.ac
+++ b/configure.ac
@@ -8,6 +8,9 @@ AC_CONFIG_HEADERS(config.h)
 AC_CONFIG_AUX_DIR(build)
 AC_CONFIG_MACRO_DIR(build)
 AM_INIT_AUTOMAKE([1.8 gnu -Wall no-define])
+AC_LIBTOOL_WIN32_DLL dnl Must be called before AC_PROG_LIBTOOL
+AC_PROG_LIBTOOL([1.4])
+GTK_DOC_CHECK([1.6])
 
 dnl ===========================================================================
 dnl
