[perf] Explicitly test rendering a path with lots of intersections.
We don't have one just for this purpose.  The only other
path with many intersections that gets actually rendered is zrusin-another,
but that might be sped up in the future (say by identifying
collinearities up front or something like that.)

--- a/perf/Makefile.am
+++ b/perf/Makefile.am
@@ -43,7 +43,8 @@ cairo_perf_SOURCES =		\
 	zrusin-another.h	\
 	long-dashed-lines.c	\
 	dragon.c		\
-	pythagoras-tree.c
+	pythagoras-tree.c	\
+	intersections.c
 
 if CAIRO_HAS_WIN32_SURFACE
 cairo_perf_SOURCES += cairo-perf-win32.c
