[perf] Add perf tests to hit rectilinear code paths.
These tests look at the differences in code paths
hit by filling paths that are rectilinear (or not) and
pixel aligned (or not) with the even-odd and non-zero
fill rules.  The paths are not simple, so they don't
hit the special case quad/triangle tessellator.

--- a/perf/Makefile.am
+++ b/perf/Makefile.am
@@ -44,7 +44,8 @@ cairo_perf_SOURCES =		\
 	long-dashed-lines.c	\
 	dragon.c		\
 	pythagoras-tree.c	\
-	intersections.c
+	intersections.c		\
+	spiral.c
 
 if CAIRO_HAS_WIN32_SURFACE
 cairo_perf_SOURCES += cairo-perf-win32.c
