[test] Test handling of fractional device offsets.

--- a/test/.gitignore
+++ b/test/.gitignore
@@ -53,6 +53,7 @@ degenerate-arc
 degenerate-path
 degenerate-pen
 device-offset
+device-offset-fractional
 device-offset-positive
 device-offset-scale
 extend-pad
