[src/Makefile.am] Add comment referring to Makefile.sources

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,5 @@
+# Note: All source files are listed in Makefile.sources.
+
 include $(top_srcdir)/build/Makefile.am.common
 include $(srcdir)/Makefile.am.config
 
