--- a/Makefile.am
+++ b/Makefile.am
@@ -3,11 +3,7 @@ include $(top_srcdir)/build/Makefile.am.common
 ACLOCAL_AMFLAGS = -I build
 
 DIST_SUBDIRS = src boilerplate test perf doc util
-SUBDIRS = src
-# gtk-doc is required for our documentation
-if ENABLE_GTK_DOC
-SUBDIRS += doc
-endif
+SUBDIRS = src doc
 # libpng is required for our test programs
 if CAIRO_HAS_PNG_FUNCTIONS
 SUBDIRS += boilerplate test perf
