--- a/Makefile.am
+++ b/Makefile.am
@@ -2,8 +2,8 @@ include $(top_srcdir)/build/Makefile.am.common
 
 ACLOCAL_AMFLAGS = -I build
 
-DIST_SUBDIRS = src boilerplate test perf doc util
-SUBDIRS = src doc
+DIST_SUBDIRS = src doc util boilerplate test perf
+SUBDIRS = src doc util
 # libpng is required for our test programs
 if CAIRO_HAS_PNG_FUNCTIONS
 SUBDIRS += boilerplate test perf
