--- a/doc/public/Makefile.am
+++ b/doc/public/Makefile.am
@@ -50,8 +50,11 @@ include $(top_srcdir)/build/Makefile.am.gtk-doc
 
 dist-hook: doc
 
+if ENABLE_GTK_DOC
 check: doc
+TESTS += check-doc-coverage.sh
+endif
 
-TESTS_ENVIRONMENT = srcdir="$(srcdir)" top_srcdir="$(top_srcdir)" MAKE="$(MAKE)"
-TESTS += check-doc-coverage.sh check-doc-syntax.sh
-EXTRA_DIST += $(TESTS)
+TESTS += check-doc-syntax.sh
+EXTRA_DIST += check-doc-coverage.sh check-doc-syntax.sh
+TESTS_ENVIRONMENT = srcdir="$(srcdir)" top_srcdir="$(top_srcdir)" MAKE="$(MAKE) $(AM_MAKEFLAGS)"
