[Makefile] Amend checks for horrible msys environment.
automake-1.8 requires $(EXEEXT) for TESTS and feeds lt-check-*.c to
check-cairoint.h. Workaround both misfeatures.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -71,7 +71,7 @@ TESTS_SH = \
 TESTS += $(TESTS_SH)
 if CROSS_COMPILING
 else
-TESTS += check-link
+TESTS += check-link$(EXEEXT)
 endif
 
 EXTRA_DIST += $(TESTS_SH) check-has-hidden-symbols.c
