[configure] Append -lz to LIBS
After going to the effort of detecting zlib for cairo-deflate-stream.c, it
rather defects the purpose of the exercise (and the mingw32 build) if we
forget to add the library to LIBS.

--- a/configure.ac
+++ b/configure.ac
@@ -27,7 +27,9 @@ AC_CACHE_SAVE
 dnl ===========================================================================
 
 AC_CHECK_LIB(z, compress,
-	 [AC_CHECK_HEADER(zlib.h, [have_libz=yes],
+	 [AC_CHECK_HEADER(zlib.h, [
+	  have_libz=yes
+	  LIBS="$LIBS -lz"],
 	 [have_libz="no (requires zlib http://www.gzip.org/zlib/)"])],
 	 [have_libz="no (requires zlib http://www.gzip.org/zlib/)"])
 
