[test] Add a test case for drawing glyphs with different metrics.
The ability to draw glyphs with different metrics is useful when doing
font substitution with fixed layout like in pdf and I eventually plan on
adding code to poppler to do something similar.

--- a/test/.gitignore
+++ b/test/.gitignore
@@ -222,6 +222,7 @@ unbounded-operator
 user-data
 user-font
 user-font-proxy
+user-font-rescale
 xlib-expose-event
 xlib-surface
 xlib-surface-source
