--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -174,6 +174,7 @@ unbounded-operator$(EXEEXT)				\
 user-data$(EXEEXT)					\
 user-font$(EXEEXT)					\
 user-font-proxy$(EXEEXT)				\
+user-font-rescale$(EXEEXT)				\
 zero-alpha$(EXEEXT)
 
 # XXX: Here are some existing tests that are currently disabled for
@@ -740,6 +741,7 @@ REFERENCE_IMAGES = \
 	user-font-proxy-pdf-ref.png	\
 	user-font-proxy-ps-ref.png	\
 	user-font-proxy-svg-ref.png	\
+	user-font-rescale-ref.png	\
 	unbounded-operator-quartz-ref.png	\
 	unbounded-operator-quartz-rgb24-ref.png	\
 	xlib-expose-event-ref.png \
