Revert "[configure] Append -lz to LIBS"
This reverts commit 9c207b24542edb2e8e388329471ab9e7d7d61ff9.

I pushed a proper fix in last commit.

--- a/configure.ac
+++ b/configure.ac
@@ -27,9 +27,7 @@ AC_CACHE_SAVE
 dnl ===========================================================================
 
 AC_CHECK_LIB(z, compress,
-	 [AC_CHECK_HEADER(zlib.h, [
-	  have_libz=yes
-	  LIBS="$LIBS -lz"],
+	 [AC_CHECK_HEADER(zlib.h, [have_libz=yes],
 	 [have_libz="no (requires zlib http://www.gzip.org/zlib/)"])],
 	 [have_libz="no (requires zlib http://www.gzip.org/zlib/)"])
 
