--- a/configure.ac
+++ b/configure.ac
@@ -19,7 +19,7 @@ dnl
 m4_include(build/configure.ac.version)	dnl macros setting up various version declares
 m4_include(build/configure.ac.tools)	dnl checks for tools we use
 m4_include(build/configure.ac.system)	dnl checks for system functions, headers, libs
-m4_include(build/configure.ac.enable)	dnl macros for backend/feature enablement
+m4_include(build/configure.ac.features)	dnl macros for backend/feature handling
 m4_include(build/configure.ac.warnings)	dnl checks for compiler warning
 m4_include(build/configure.ac.analysis)	dnl checks for analysis tools (lcov, etc)
 AC_CACHE_SAVE
