[Makefile.win32] Don't declare CAIRO_NO_MUTEX

--- a/Makefile.win32
+++ b/Makefile.win32
@@ -21,7 +21,7 @@ DEFAULT_CFLAGS += -D_CRT_SECURE_NO_DEPRECATE -D_CRT_NONSTDC_NO_DEPRECATE
 DEFAULT_CFLAGS += -DPACKAGE_BUGREPORT="" -DCAIRO_BUILD
 DEFAULT_CFLAGS += -I. 
 DEFAULT_CFLAGS += $(PIXMAN_CFLAGS)
-DEFAULT_CFLAGS += -DCAIRO_NO_MUTEX=1  -DLIBCAIRO_EXPORTS
+DEFAULT_CFLAGS += -DLIBCAIRO_EXPORTS
 
 CFLAGS := $(DEFAULT_CFLAGS)
 
